调整架构